LPS-61498 lang keys

--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_ar.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=أدخل الأسماء الافتراضية للمواقع <strong>في السطر</strong> والتي هي مرتبطة بمستخدمين تم إنشاؤهم حديثا.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=أدخل أسماء مجموعات المستخدمين التي سيرتبط المستخدمون الجدد بها <strong>إسما في السطر الواحد</strong>.
 home-url=رابط الرئيسية
-home-url-help=هذه هي الصفحة الرئيسية للمدخل. على سبيل المثال، إذا كنت تريد الصفحة الرئيسية لتكون http://localhost:8080/web/ضيف/الوطن، قم بتعيين هذا إلى/web/guest/home. (Automatic Translation)
+home-url-help=هذه هي الصفحة الرئيسية لمثيل Liferay. على سبيل المثال، إذا كنت تريد الصفحة الرئيسية لتكون http://localhost:8080/web/ضيف/الوطن، قم بتعيين هذا إلى/web/guest/home. (Automatic Translation)
 how-do-users-authenticate=بماذا يدخل المستخدمون؟
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=الإعدادات هي مكان حيث تتوافر فيه معظم اعدادت البورتال متضمنة الاسماء والتوثيقات وارتباطات المستخدمين والبريد واسماء المضيفين
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=إعدادات البورتال
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=الإعدادات من حيث معظم الإعدادات مثيل العالمية، بما في ذلك أسماء والمصادقة، ورابطات المستخدم الافتراضي وأسماء المضيف البريد. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=إعدادات المثيل (Automatic Translation)
 language-and-time-zone=اللغة والمنطقة الزمنية
 mail-host-names=أسماء موزّعات البريد الإلكتروني
 main-configuration=إعدادات الشكل
