--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_ca.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Introduïu els noms dels llocs web per defecte (<strong>per línia</strong>) que s'associaran als nous usuaris.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Introduïu els noms dels grups per defecte d'usuaris (<strong>per línia</strong>) que estaran associats als nous usuaris.
 home-url=l'URL de l'inici
-home-url-help=Aquesta és la pàgina principal del portal. Per exemple, si voleu que la pàgina d'inici ser http://localhost:8080/web/aquests/casa, conjunt això a /web/guest/home. (Automatic Translation)
+home-url-help=Aquesta és la pàgina d'inici de la instància Liferay. Per exemple, si voleu que la pàgina d'inici ser http://localhost:8080/web/aquests/casa, conjunt això a /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Com s'autentiquen els usuaris?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=La configuració és on es troben la majoria dels paràmetres del portal, inclosos els noms, l'autenticació, les associacions d'usuaris per defecte i els noms dels amfitrions de correu.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Paràmetres del portal
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Configuració és on la majoria de les escenes d'instància global incloent noms, autenticació, associacions d'usuari per defecte i noms d'amfitrió de correu. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Configuració de la instància (Automatic Translation)
 language-and-time-zone=Llengua i zona horària
 mail-host-names=Servidors de correu
 main-configuration=Configuració principal
