--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_cs.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Zadejte jména web výchozích pro nově vytvořené uživatele, každé jméno na samostatný řádek.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Zadejte jména skupin uživatelů <strong>jednu na každou řádku</strong>, které budou automaticky asociovány s nově vytvořenými uživateli.
 home-url=Adresa domovské stránky
-home-url-help=Toto je domovská stránka portálu. Například pokud chcete domovskou stránku http://localhost: 8080/web/hodnocení/domov, nastavte na /web/guest/home. (Automatic Translation)
+home-url-help=TranslateApiException: Timeout : ID=3541.V2_Json.Translate.35099527 (Automatic Translation)
 how-do-users-authenticate=Jak ověřovat uživatele?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Nastavení je oblast, ve které je umístěna většina globálního portálového nastavení vč. jmen, autentizace, základního přiřazení uživatelů a emailových nastavení.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Nastavení
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Nastavení je, kde se většina nastavení globální instance včetně názvů, ověřování, sdružení uživatelů ve výchozím nastavení a názvy hostitelů pošty. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Nastavení instance (Automatic Translation)
 language-and-time-zone=Jazyk a časová zóna
 mail-host-names=Adresy poštovních serverů
 main-configuration=Hlavní konfigurace
