--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_de.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Geben Sie die Standard-Site-Namen mit denen ein neu angelegter Benutzer verknüpft werden soll einzeln <strong>pro Zeile</strong> ein.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Geben Sie bitte <strong>eine</strong> Gruppe <strong>pro Zeile</strong> ein, die mit neu angelegten Benutzern verknüpft werden soll.
 home-url=URL der Startseite
-home-url-help=Dies ist die Startseite des Portals. Beispielsweise wenn die Homepage http://localhost: 8080/Web/Gast/Home sein soll, legen Sie dies auf /web/guest/home. (Automatic Translation)
+home-url-help=Dies ist die Homepage der Liferay-Instanz. Beispielsweise wenn die Homepage localhost8080: / Web/Gast/Home sein soll, legen Sie dies auf /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Wie authentifizieren sich Nutzer?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=In den Portaleinstellungen werden die globalen Einstellungen des Portals bestimmt, darunter der Name des Portals, Authentifizierung, Standard-Benutzerzuordnungen und Mailhostnamen.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Portaleinstellungen
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Einstellungen ist, wo die meisten globale Instanzeneinstellungen einschließlich sind Namen, Authentifizierung und Standardverknüpfungen Benutzer e-Mail-Host-Namen. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Instanzeneinstellungen (Automatic Translation)
 language-and-time-zone=Sprache und Zeitzone
 mail-host-names=Mailhostnamen
 main-configuration=Hauptkonfiguration
