--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_el.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Εισαγωγή των ονομάτων sites <strong>(ένα ανά γραμμή)</strong> που θα αποδίδονται στους νεοδημιουργούμενους χρήστες.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Εισαγωγή των προκαθορισμένων ονομάτων ομάδων χρηστών <strong>(ένα όνομα ανά γραμμή)</strong> που θα αποδίδονται στους νεοδημιουργούμενους χρήστες.
 home-url=URL αρχικής σελίδας
-home-url-help=Πρόκειται για την αρχική σελίδα της πύλης. Για παράδειγμα, αν θέλετε την αρχική σελίδα να είναι http://localhost: 8080/web/επισκέπτη/στο σπίτι, αυτό που να /web/guest/home. (Automatic Translation)
+home-url-help=Πρόκειται για την αρχική σελίδα της Liferay παρουσίας. Για παράδειγμα, αν θέλετε την αρχική σελίδα να είναι http://localhost:8080/web/επισκέπτη/στο σπίτι, αυτό που να /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Πώς κάνουν οι χρήστες επικύρωση πρόσβασης
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Οι Ρυθμίσεις είναι το σημείο όπου ρυθμίζονται οι περισσότερες κεντρικές ιδιότητες του portal, όπως ονόματα, αυθεντικοποίηση, συσχετίσεις χρηστών και mail host names.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Ρυθμίσεις
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Ρυθμίσεις είναι όπου οι περισσότερες από τις ρυθμίσεις της παγκόσμιας παρουσίας συμπεριλαμβανομένων ονομάτων, ελέγχου ταυτότητας, προεπιλεγμένη ενώσεις χρηστών και ονόματα κεντρικών υπολογιστών ταχυδρομείου. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Ρυθμίσεις εμφάνισης (Automatic Translation)
 language-and-time-zone=Γλώσσα και χρονική ζώνη
 mail-host-names=Ονόματα συστήματος email
 main-configuration=Κύρια διαμόρφωση
