--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_es.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Introduce los nombres de los sitios por defecto <strong>por línea</strong> que están asociados con los usuarios recien creados.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Introduzca los nombres de los grupos de usuarios (uno <strong>por línea</strong>) que serán asignados por defecto a los nuevos usuarios.
 home-url=URL de Inicio
-home-url-help=Esta es la página de inicio del portal. Por ejemplo, si desea que la página sea http://localhost: 8080/web/guest/home, cambialo a /web/guest/home. (Automatic Translation)
+home-url-help=Esta es la página de inicio de la instancia de Liferay. Por ejemplo, si desea que la página de inicio a inicio/http://localhost:8080/web/guest, cambialo a /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Método de autenticación de usuarios
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=La Configuración es el lugar donde se encuentran la mayor parte de opciones de configuración del portal, como por ejemplo los nombres, autenticación, asociaciones por defecto de usuarios, servidores y direcciones de servidores de correo.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Configuración del Portal
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Configuración es donde la mayor parte de la configuración de la instancia global incluyen nombres, autenticación, asociaciones de usuarios por defecto y nombres de host de correo. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Configuración de la instancia (Automatic Translation)
 language-and-time-zone=Lengua y zona horaria
 mail-host-names=Servidores de correo
 main-configuration=Configuración principal
