--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_et.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Enter the default site names <strong>per line</strong> that are associated with newly created users. (Automatic Copy)
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Sisesta vastloodud kasutajatega seotud vaikimisi kasutajagruppide nimed <strong>rea kohta</strong>.
 home-url=Esilehe aadress
-home-url-help=See on portaali avalehel. Näiteks kui soovite kodulehekülg http://localhost:8080, veebis, Külastajate ja kodus olla, seatud see /web/guest/home. (Automatic Translation)
+home-url-help=See on kodulehekülg Liferay astme. Näiteks kui soovite kodulehekülg http://localhost:8080, veebis, Külastajate ja kodus olla, seatud see /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Kuidas kasutajad autendivad?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Settings is where most of the global portal settings are including names, authentication, default user associations, and mail host names. (Automatic Copy)
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Seaded
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Seaded on, kus enamik ülemaailmse astme seaded on ka nimesid, autentimine, vaike ühendustele ja posti hostinimed. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Eksemplari sätted (Automatic Translation)
 language-and-time-zone=Language and Time Zone (Automatic Copy)
 mail-host-names=Meiliserveri nimed
 main-configuration=Põhiseadistus
