--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_fa.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=<strong>به ازای هر خط</strong> نام سایت پیش‌فرض مربوط به کاربری که جدیدا تولید شده است را وارد کنید.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=<strong>به ازای هر خط</strong> نام گروه کاربری پیش‌فرض مربوط به کاربری که جدیدا تولید شده است را وارد کنید.
 home-url=آدرس صفحه‌ی اصلی
-home-url-help=این صفحه اصلی پورتال است. به عنوان مثال، اگر می خواهید صفحه اصلی به http://localhost:8080/وب/مهمان/صفحه اصلی این مجموعه به /web/guest/home. (Automatic Translation)
+home-url-help=این صفحه نمونه دگردیسی است. به عنوان مثال، اگر می خواهید صفحه اصلی به http://localhost:8080/وب/مهمان/صفحه اصلی این مجموعه به /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=کاربران چگونه شناسایی می شوند؟
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=بیشتر تنظیمات عمومی پورتال از قبیل کاربران، مجوز دسترسی‌ها، ارتباط‌های پیش‌فرض و نام‌های میزبان ایمیل در بخش تنظیمات انجام می‌شود.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=تنظیمات پورتال
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=تنظیمات است که در آن بسیاری از تنظیمات نمونه جهانی از جمله هستند نام تأیید اعتبار پیش فرض کاربر انجمن و پست نام میزبان. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=به عنوان مثال تنظیمات (Automatic Translation)
 language-and-time-zone=زبان و منطقه زمانی
 mail-host-names=نام میزبان‌های ایمیل
 main-configuration=تنظیمات اصلی
