--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_fi.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Syötä oletus sivusto nimet <strong>per rivi</strong> jotka ovat liitetty juuri luotuihin käyttäjiin.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Syötä oletus käyttäjäryhmät <strong>yksi riviä kohden</strong>, jotka liitetään uusiin käyttäjiin.
 home-url=Koti URL
-home-url-help=Tämä on portaalin kotisivulle. Esimerkiksi jos haluat kotisivun http://localhost: 8080/web/Asiakkaamme/home, määrittää tämän /web/guest/home. (Automatic Translation)
+home-url-help=Tämä on Kotisivu Liferay-esiintymän. Esimerkiksi jos haluat kotisivun http://localhost:8080/web/Asiakkaamme/home, määrittää tämän /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Kuinka käyttäjät autentikoituvat?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Asetuksista löytyy suurin osa koko portaalin laajuisista asetuksista kuten nimet, todennus, käyttäjien oletusassosiaatiot sekä sähköpostipalvelimien nimet.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Asetukset
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Asetukset on, jossa useimmat yleinen esiintymän asetukset ovat myös nimet, todennusta, käyttäjän oletuskytkentöjä ja mail isäntänimet. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Esiintymän asetukset (Automatic Translation)
 language-and-time-zone=Kieli ja aikavyöhyke
 mail-host-names=Sähköpostipalvelimet
 main-configuration=Pääkonfiguraatio
