--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_hi_IN.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Enter the default site names <strong>per line</strong> that are associated with newly created users. (Automatic Copy)
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Enter the default user group names <strong>per line</strong> that are associated with newly created users. (Automatic Copy)
 home-url=घर का यूआरएल
-home-url-help=इस पोर्टल के मुख पृष्ठ है। यदि आप घर पृष्ठ http://localhost:8080/वेब/अतिथि/होम किया जा करने के लिए चाहते हैं, उदाहरण के लिए, यह /web/guest/home करने के लिए सेट करें। (Automatic Translation)
+home-url-help=इस आवृत्ति में Liferay के मुख पृष्ठ है। यदि आप घर पृष्ठ http://localhost:8080/वेब/अतिथि/होम किया जा करने के लिए चाहते हैं, उदाहरण के लिए, यह /web/guest/home करने के लिए सेट करें। (Automatic Translation)
 how-do-users-authenticate=उपयोगकर्ताओं को कैसे प्रमाणित करते हैं?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=सेटिंग्स है जहां वैश्विक पोर्टल सेटिंग्स की अधिकांश नाम, प्रमाणीकरण, डिफ़ॉल्ट उपयोगकर्ता संघों, और मेल होस्ट नामों सहित रहे हैं। (Automatic Translation)
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=सेटिंग
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=सेटिंग्स है जहां वैश्विक आवृत्ति सेटिंग्स की अधिकांश नाम, प्रमाणीकरण, डिफ़ॉल्ट उपयोगकर्ता संघों और मेल होस्ट नामों सहित रहे हैं। (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=आवृत्ति सेटिंग्स (Automatic Translation)
 language-and-time-zone=भाषा और समय क्षेत्र
 mail-host-names=मेल होस्ट नाम
 main-configuration=मुख्य कॉनफिगरेशन
