--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_hu.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=A most létrehozott felhasználóhoz alapértelmezetten hozzárendelt webhelyek. (Egy sor egy webhelyet tartalmazhat.)
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=írd be azon felhasználói csoportok nevét <strong>soronként</strong>, amelyek az újonnan létrehozott felhasználókkal társítva legyenek.
 home-url=Nyitólap URL
-home-url-help=Ez a portál kezdőlapján. Például ha azt szeretné, hogy a haza oldal-hoz localhost8080: / web/guest/home kell, állítsa ezt /web/guest/home. (Automatic Translation)
+home-url-help=Ez a honlap a Liferay-példány. Például ha azt szeretné, hogy a haza oldal-hoz localhost8080: / web/guest/home kell, állítsa ezt /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Hogyan azonosítjuk a felhasználókat?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=A beállítások során lehet megadni az alapvető portál-jellemzőket, például az elnevezéseket, azonosítás módját, felhasználók induló hovatartozásait és a levelező szerverek neveit.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Portál beállításai
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Elintézés, ahol a globális példány beállítások a legtöbb többek között nevek, a hitelesítés, a alapértelmezett felhasználói szövetségeket és a mail host neveket. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Példány beállítások (Automatic Translation)
 language-and-time-zone=Nyelv és időzóna
 mail-host-names=Levelező kiszolgáló neve
 main-configuration=Fő konfiguráció
