--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_in.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Masukkan nama default situs <strong> per baris </strong> yang terkait dengan pengguna yang baru dibuat.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Masukkan nama grup pengguna standar <strong>per baris </strong> yang berkaitan dengan user yang baru dibuat.
 home-url=Home URL
-home-url-help=Ini adalah halaman portal. Misalnya, jika Anda ingin halaman rumah menjadi http://localhost: 8080/web/tamu/home, mengatur ini untuk /web/guest/home. (Automatic Translation)
+home-url-help=Ini adalah halaman contoh Liferay rumah. Misalnya, jika Anda ingin halaman rumah menjadi http://localhost:8080/web/tamu/home, mengatur ini untuk /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Bagaimana pengguna mengotentikasi?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Pengaturan adalah lokasi dimana Anda adpat menemukan sebagian besar pengaturan portal global termasuk nama, otentikasi, asosiasi default user, dan nama host mail
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Pengaturan
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Pengaturan ini dimana sebagian besar pengaturan global contoh termasuk nama, otentikasi, Asosiasi pengguna default, dan nama host mail. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Contoh pengaturan (Automatic Translation)
 language-and-time-zone=Bahasa dan Zona Waktu
 mail-host-names=Nama Host mail
 main-configuration=Konfigurasi Utama
