--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_it.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Inserisci i nomi sito predefiniti <strong>uno per riga</strong> che sono associati agli utenti creati di recente.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Inserisci i nomi dei gruppi utente <strong>uno per riga</strong> che saranno associati di default ai nuovi utenti creati.
 home-url=URL della Home Page
-home-url-help=Questa è la home page del portale. Ad esempio, se si desidera che la home page per essere http://localhost:8080//web/ospite/casa, impostare questo per /web/guest/home. (Automatic Translation)
+home-url-help=Questa è la home page dell'istanza Liferay. Ad esempio, se si desidera che la home page per essere http://localhost:8080/web/ospite/casa, impostare questo per /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Come si autenticano gli utenti?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Nelle impostazioni portale si trovano la maggior parte delle impostazioni globali del portale incluse quelle dei nomi, l'autenticazione, le associazioni predefinite di utenti e i nomi host dei server di posta.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Impostazioni Portale
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Impostazioni è dove la maggior parte delle impostazioni istanza globale sono inclusi nomi, autenticazione, associazioni di utenti predefinito e i nomi di host di posta. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Impostazioni dell'istanza (Automatic Translation)
 language-and-time-zone=Lingua e Fuso Orario
 mail-host-names=Nomi Mail Host
 main-configuration=Configurazione Principale
