--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_iw.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=הכנס את ברירת המחדל עבור שמות האתרים <strong>בכל שורה</strong> אשר משוייכים למשתמשים החדשים שנוצרו.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=הכנס את ברירות המחדל עבור שמות קבוצות המשתמשים <strong>בכל שורה</strong> שמשוייכים למשתמשים החדשים שנוצרו.
 home-url=URL ביתי
-home-url-help=זה לדף הבית של הפורטל. לדוגמה, אם ברצונך דף הבית להיות http://localhost:8080/אינטרנט/חוות/בית, הגדר זאת /web/guest/home. (Automatic Translation)
+home-url-help=זהו דף הבית של המופע Liferay. לדוגמה, אם ברצונך דף הבית להיות http://localhost:8080/אינטרנט/חוות/בית, הגדר זאת /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=איך המשתמשים מאמתים?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=הגדרות הוא היכן שרוב הגדרות הפורטל נמצאות, לדוגמא: שמות, אימות, שיוכי משתמש ושמות שרתי דואר
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=הגדרות הפורטל
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=הגדרות הוא איפה רוב ההגדרות מופע הכללית הם כולל שמות, אימות, שיוכי המשתמש המהווים ברירת מחדל ושמות מארחים דואר. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=מופע הגדרות (Automatic Translation)
 language-and-time-zone=שפה ואזור זמן
 mail-host-names=שמות מארח הדואר
 main-configuration=הגדרות ראשיות
