--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_lt.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Enter the default site names <strong>per line</strong> that are associated with newly created users. (Automatic Copy)
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Enter the default user group names <strong>per line</strong> that are associated with newly created users. (Automatic Copy)
 home-url=Home URL (Automatic Copy)
-home-url-help=Tai portalo pagrindiniame puslapyje. Pavyzdžiui, jei norite pagrindiniame puslapyje, kad http://localhost: 8080/web/Svečių/namų, nustatyti tai /web/guest/home. (Automatic Translation)
+home-url-help=Tai yra pagrindinis puslapis Liferay instancijos. Pavyzdžiui, jei norite pagrindiniame puslapyje, kad http://localhost:8080/web/Svečių/namų, nustatyti tai /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=How do users authenticate? (Automatic Copy)
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Settings is where most of the global portal settings are including names, authentication, default user associations, and mail host names. (Automatic Copy)
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Portal Settings (Automatic Copy)
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Nustatymai yra, kai dauguma pasaulio instancijos parametrai yra taip pat pavadinimai, patvirtinimo, numatytasis vartotojų asociacijas ir pašto vardų. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Instancijos parametrai (Automatic Translation)
 language-and-time-zone=Language and Time Zone (Automatic Copy)
 mail-host-names=Mail Host Names (Automatic Copy)
 main-configuration=Main Configuration (Automatic Copy)
