--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_nl.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Voer <strong>per regel</strong> de standaardsites in waaraan aan nieuwe gebruikers worden gekoppeld.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Voer <strong>per regel</strong> de groepen in waaraan nieuwe gebruikers standaard worden gekoppeld.
 home-url=Startpagina-URL
-home-url-help=Dit is de introductiepagina van de portal. Bijvoorbeeld, als u wilt dat de introductiepagina als http://localhost: 8080/web/gast/home, ingesteld dit op /web/guest/home. (Automatic Translation)
+home-url-help=Dit is de introductiepagina van het Liferay-aanleg. Bijvoorbeeld, als u wilt dat de introductiepagina als localhost8080: / web/gast/home, ingesteld dit op /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Hoe authenticeren gebruikers zich?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Via Instellingen beheert u de meeste globale portalinstellingen: namen, authenticatie, standaardgebruikersinstellingen en mailhostnamen.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Portalinstellingen
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Instellingen is waar het merendeel van de instellingen van het globale exemplaar zijn inclusief namen, verificatie, standaard gebruiker verenigingen en mail hostnamen. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Aanleg instellingen (Automatic Translation)
 language-and-time-zone=Taal en tijdzone
 mail-host-names=Mailhostnamen
 main-configuration=Hoofdconfiguratie
