--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_pl.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Wprowadź nazwy domyślnych witryn <strong>po jednej nazwie na wiersz</strong>, do których zostaną przypisani nowo utworzeni użytkownicy.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Wprowadź nazwy domyślnych grup użytkownika <strong>po jednej nazwie na wiersz</strong>, do których zostanie przypisany nowo utworzony użytkownik.
 home-url=URL strony głównej
-home-url-help=To jest Strona główna portalu. Na przykład jeśli strona jest http://localhost: 8080/web/Opinie/domu, ustaw tę opcję /web/guest/home. (Automatic Translation)
+home-url-help=To jest strona wystąpienie Liferay. Na przykład jeśli chcesz, aby strona się localhost8080: / www/Opinie/domu, ustaw tę opcję /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Jak uwierzytelniają się użytkownicy?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Ustawienia to dział w którym znajduje się większość ustawień portalowych, w tym nazwy, uwierzytelnienia, domyślne przypisania użytkownika i nazwy serwerów e-mailowych.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Ustawienia portalowe
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Ustawień jest gdzie większość ustawień globalnych wystąpienie są tym uwierzytelniania, stowarzyszenia użytkowników domyślnym, nazw i nazwy hosta poczty. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Ustawienia instancji (Automatic Translation)
 language-and-time-zone=Język i strefa czasowa
 mail-host-names=Nazwy serwera pocztowego
 main-configuration=Konfiguracja poczty
