--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_pt_PT.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Introduza os nomes do site <strong>por linha</strong> que serão associados por defeito a utlizadores recém-criados.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Introduza os grupos por defeito <strong>por linha</strong> que serão associados aos utilizadores recém-criados.
 home-url=URL do repouso
-home-url-help=Esta é a home page do portal. Por exemplo, se você quer ser http://localhost:8080//web/comentários/home home page, defina isso para /web/guest/home. (Automatic Translation)
+home-url-help=Esta é a home page do Liferay instância. Por exemplo, se você quer ser http://localhost:8080//web/comentários/home home page, defina isso para /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Como os usuários authenticate?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Configurações são a forma de de definir a maioria das propriedades do portal, incluindo nomes, autenticação, associações por omissão a Utilizadores, ou mesmo endereço de servidores de correio electrónico.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Configurações do Portal
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Settings é onde a maioria das configurações instância global está incluindo nomes, autenticação, associações de usuário padrão e nomes de host de email. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Configurações de instância (Automatic Translation)
 language-and-time-zone=Língua e fuso horário
 mail-host-names=Nomes De Anfitrião Do Correio
 main-configuration=Configuração principal
