--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_ro.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Enter the default site names <strong>per line</strong> that are associated with newly created users. (Automatic Copy)
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Introdu numele de grupuri de utilizatori impliciți <strong>pe line</istrong> care sunt asociați cu utilizatori noi creați.
 home-url=URL Acasa
-home-url-help=Aceasta este pagina de start a portalului. De exemplu, dacă doriţi pagina de pornire pentru a http://localhost: 8080/web/comentarii/home, seta acest lucru să /web/guest/home. (Automatic Translation)
+home-url-help=Aceasta este pagina de pornire instanță Liferay. De exemplu, dacă doriţi pagina de pornire pentru a http://localhost:8080/web/comentarii/home, seta acest lucru să /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Cum se autentifică utilizatorii?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Setări este locul unde sunt majoritatea setărilor globale, printre care nume, autentificare, asocieri implicite ale utilizatorilor și numele gazdă a mailurilor.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Setări portal
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Setări este în cazul în care majoritatea setărilor globale instanţă sunt, inclusiv nume, autentificare, asociaţiile de utilizator implicit şi nume de gazdă poştă. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Setările de instanţă (Automatic Translation)
 language-and-time-zone=Limba și Fus Orar
 mail-host-names=Nume Host Mail
 main-configuration=Configuratie Principala
