--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_sk.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Zadajte prednastavené mená sídiel, <strong>jedno na riadok</strong>, ktoré sú priradené novo vytvoreným používateľom.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Zadajte predvolené mená používateľských skupín, ktoré sú asociované s novo vytvorenými používateľmi, <strong>každé na nový riadok</strong>.
 home-url=Adresa domovskej stránky
-home-url-help=Toto je Domovská stránka portálu. Napríklad, ak chcete domovskú stránku http://localhost: 8080 web, hodnotenie/domov, nastaviť na /web/guest/home. (Automatic Translation)
+home-url-help=Toto je Hlavná stránka Liferay stupňa. Napríklad, ak chcete domovskú stránku http://localhost:8080 web, hodnotenie/domov, nastaviť na /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Ako sa používatelia autentifikujú?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Nastavenia obsahujú všeobecné nastavenia portálu, vrátane používateľov a ich štandardných asociácií, overovania, poštových serverov, atď.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Nastavenia portálu
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Nastavenie je, kde väčšina nastavení globálnej stupňa vrátane mená, overovania, priradenia predvolených používateľov a názvov hostiteľov pošty. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Napríklad nastavenia (Automatic Translation)
 language-and-time-zone=Jazyk a časové pásmo
 mail-host-names=Mená poštových hostiteľov
 main-configuration=Hlavná konfigurácia
