--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_sl.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Enter the default site names <strong>per line</strong> that are associated with newly created users. (Automatic Copy)
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Vnesite po eno porivzeto ime skupine uporabnikov <strong>na vrstico</strong> (ki je povezana z na novo ustvarjenimi uporabniki).
 home-url=Domači spletni naslov
-home-url-help=To je domača stran portala. Na primer, če želite domača stran za http://localhost:8080/web/Ocene/dom, naj to /web/guest/home. (Automatic Translation)
+home-url-help=To je domača stran Liferay stopnje. Na primer, če želite domača stran za http://localhost:8080/web/Ocene/dom, naj to /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Kako se uporabniki preverjajo?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Settings is where most of the global portal settings are including names, authentication, default user associations, and mail host names. (Automatic Copy)
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Nastavitve
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Nastavitve je, kjer večina globalne stopnje nastavitve so vključno z imeni, preverjanje pristnosti, povezave privzetega uporabnika, in pošte gostiteljska imena. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Primer nastavitve (Automatic Translation)
 language-and-time-zone=Language and Time Zone (Automatic Copy)
 mail-host-names=Imena e-poštnih gostiteljev
 main-configuration=Glavne nastavitve
