--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_vi.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Nhập vào tên trang TTĐT mặc định <strong>trên mỗi dòng</strong> của người dùng mới.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Nhập vào tên nhóm người dùng mặc định <strong>trên mỗi dòng</strong> của người dùng mới.
 home-url=URL trang chủ
-home-url-help=Đây là trang chủ của cổng thông tin. Ví dụ, nếu bạn muốn trang chủ để http://localhost:8080/web/đánh/nhà, thiết lập này để /web/guest/home. (Automatic Translation)
+home-url-help=Đây là trang chủ của phần Liferay. Ví dụ, nếu bạn muốn trang chủ để http://localhost:8080/web/đánh/nhà, thiết lập này để /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Người dùng được xác thực như thế nào?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=<Cài đặt> là nơi lưu trữ các thông số thiết lập chung của cổng thông tin điện tử như: tên, chứng thực, thiết lập với người dùng mặc định, tên máy chủ lưu trữ thư điện tử.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Thiết lập cổng TTĐT
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Cài đặt là nơi hầu hết các thiết lập toàn cầu thể hiện bao gồm tên, xác thực, mặc định dùng Hiệp hội, và tên máy chủ thư. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Trường hợp cài đặt (Automatic Translation)
 language-and-time-zone=Ngôn ngữ và Múi giờ
 mail-host-names=Tên máy chủ thư
 main-configuration=Thiết lập tham số cấu hình chính
