--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_zh_CN.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=在<strong>每行</strong>中输入与新创建的用户相关联的默认站点名称。
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=在<strong>每行</strong>输入与新创建的用户相关联的默认用户群组名称。
 home-url=主页URL
-home-url-help=这是门户网站的主页。例如，如果您希望主页是 http://localhost:8080/首页/客人，设置为 /web/guest/home。 (Automatic Translation)
+home-url-help=这是主页的 Liferay 实例。例如，如果您希望主页是 http://localhost:8080/首页/客人，设置为 /web/guest/home。 (Automatic Translation)
 how-do-users-authenticate=用户如何认证？
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=设置指的是portal的全局性设置，包括姓名、身份验证、默认用户关联、邮件主机名称的参数设置等。
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Portal设置
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=设置是在那里的大多数全局实例设置包括名称、 身份验证、 默认用户关联和邮件主机名称。 (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=实例设置 (Automatic Translation)
 language-and-time-zone=语言和时区
 mail-host-names=邮件主机名
 main-configuration=主要配置
