--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_zh_TW.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=輸入預設站台名稱<strong>每行</strong>關聯於新創建的使用者。
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=輸入預設使用者群組名稱<strong>每行</strong>關聯於新創建的使用者。
 home-url=首頁網址
-home-url-help=這是入口網站的主頁。例如，如果您希望主頁是 HTTP://localhost:8080/首頁/客人，設置為 /web/guest/home。 (Automatic Translation)
+home-url-help=這是主頁的 Liferay 實例。例如，如果您希望主頁是 HTTP://localhost:8080/首頁/客人，設置為 /web/guest/home。 (Automatic Translation)
 how-do-users-authenticate=使用者如何驗證？
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=設定是指大部分全域入口網設定，包含名稱、認證、預設使用者關聯與郵件主機名稱。
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=入口網設置
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=設置是在那裡的大多數全域實例設置包括名稱、 身份驗證、 預設使用者關聯和郵件主機名稱稱。 (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=實例設置 (Automatic Translation)
 language-and-time-zone=語系和時區
 mail-host-names=郵件主機名
 main-configuration=主要配置
