--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_bg.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Enter the default site names <strong>per line</strong> that are associated with newly created users. (Automatic Copy)
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Въведете имената на потребителските групи по подразбиране <strong>на ред</strong>, които са асоциирани с новосъздадените потребители.
 home-url=Домашен URL
-home-url-help=Това е началната страница на портала. Например ако искате началната страница за да http://Localhost: 8080/уеб/гост/Начало, задайте това да /web/guest/home. (Automatic Translation)
+home-url-help=Това е началната страница на Liferay съд. Например ако искате началната страница да бъде http://localhost:8080/уеб/гост/Начало, задайте това да /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Как се удостоверяват потребителите?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Настройки е мястото, където се намират повечето портални настройки, включително имена, оторизиране, зададените по подразбиране асоциации на потребителя и имената на сървърите за електронна поща.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Настройки
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Настройки е, където повечето от настройките на глобален съд са, включително имена, удостоверяване, по подразбиране потребителски сдружения и поща хост имена. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Настройки на екземпляр (Automatic Translation)
 language-and-time-zone=Language and Time Zone (Automatic Copy)
 mail-host-names=Mail Host Names (Automatic Copy)
 main-configuration=Основна конфигурация
