--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_da.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Angiv the default site names <strong>per line</strong> that are associated with newly created users.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Angiv the default user group names <strong>per line</strong> that are associated with newly created users.
 home-url=Home URL (Automatic Copy)
-home-url-help=Dette er startsiden på portalen. For eksempel, hvis du vil hjem side hen til blive localhost8080: / web/gæst/home, indstille dette til /web/guest/home. (Automatic Translation)
+home-url-help=Dette er startsiden på Liferay forekomst. For eksempel, hvis du vil hjem side hen til blive localhost8080: / web/gæst/home, indstille dette til /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=How do users authenticate? (Automatic Copy)
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Indstillinger er hvor hovedparten af de globale portalindstillinger er tilgængelige, eksempelvis navne, autorisering, standard brugerassocieringer og e-mail-værtsnavne.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Portalindstilinger
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Indstillingerne er, hvor de fleste globale forekomst indstillinger herunder navne, godkendelse, standard brugersammenslutninger og mail værtsnavne. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Forekomstens indstillinger (Automatic Translation)
 language-and-time-zone=Sprog og tidszone
 mail-host-names=E-mail-værtsnavne
 main-configuration=Hovedindstillinger
