--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_eu.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Sartu berriki sortu den erabiltzailerekin lotuta egongo diren guneen izen lehenetsiak <strong>lerroko</strong>.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Sartu erabiltzaileen talde izenak <strong>lerroko</strong> erabiltzaile berriei defektuz esleituko zaienak.
 home-url=Etxeko URL-a
-home-url-help=This is the home page of the portal. For example, if you want the home page to be http://localhost:8080/web/guest/home, set this to /web/guest/home. (Automatic Copy)
+home-url-help=This is the home page of the Liferay instance. For example, if you want the home page to be http://localhost:8080/web/guest/home, set this to /web/guest/home. (Automatic Copy)
 how-do-users-authenticate=Nola egiaztatzen dira erabiltzaileak?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Konfigurazioa portaleko konfigurazio gehienak aurkitzen diren lekua da, hala nola, izenak, autentifikazioa, erabiltzaileen oinarrizko loturak, zerbitzariak eta posta elektronikoko helbideak.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Portalaren ezarpenak
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Settings is where most of the global instance settings are including names, authentication, default user associations, and mail host names. (Automatic Copy)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Instance Settings (Automatic Copy)
 language-and-time-zone=Hizkuntza eta Ordu Zona
 mail-host-names=Posta ostalarien izenak
 main-configuration=Konfigurazio nagusia
