--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_fr.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Saisir le nom des sites par défaut <strong>(un par ligne)</strong> qui seront associés aux utilisateurs nouvellement créés.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Entrez les noms des groupes d'utilisateurs par défaut (<strong>un par ligne</strong>) qui seront associés avec chaque nouvel utilisateur créé.
 home-url=URL de maison
-home-url-help=Il s'agit de la page d'accueil du portail. Par exemple, si vous voulez être http://localhost: 8080/web/commentaires/Accueil, la page d'accueil, sur cela /web/guest/home. (Automatic Translation)
+home-url-help=Il s'agit de la page d'accueil de l'instance de Liferay. Par exemple, si vous voulez la page d'accueil http://localhost:8080/web/commentaires/maison, sur ce /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Comment les utilisateurs s'authentifient-ils ?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Dans Paramètres se trouve la plupart des paramètres globaux du portail, dont le nommage, l'authentification, les associations utilisateur par défaut et les noms de l'hôte de messagerie.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Configurations
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Paramètres est où la plupart des paramètres instance globale est notamment les noms, l'authentification, associations d'utilisateurs par défaut et noms d'hôte de messagerie. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Paramètres d'instance (Automatic Translation)
 language-and-time-zone=Fuseau horaire de langue et
 mail-host-names=Noms des serveurs de courrier
 main-configuration=Configuration principale
