--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_hr.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Unesite mjestu imena zadani <strong>po redu</strong> koje su povezane sa novostvorene korisnicima.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Unesi zadane nazive grupa korisnika <strong>po retku</strong> koje će biti povezane s novo kreiranim korisnicima.
 home-url=Početna URL
-home-url-help=This is the home page of the portal. For example, if you want the home page to be http://localhost:8080/web/guest/home, set this to /web/guest/home. (Automatic Copy)
+home-url-help=This is the home page of the Liferay instance. For example, if you want the home page to be http://localhost:8080/web/guest/home, set this to /web/guest/home. (Automatic Copy)
 how-do-users-authenticate=Kako korisnici dokazuju autentičnost?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Postavke sadrže većinu globalnih postavki portala uključujući nazive, autentikaciju, podrazumijevane korisničke udruge i nazive poslužitelja elektroničke pošte.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Postavke portala
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Settings is where most of the global instance settings are including names, authentication, default user associations, and mail host names. (Automatic Copy)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Instance Settings (Automatic Copy)
 language-and-time-zone=Jezik i vremenska zona
 mail-host-names=Imena mail poslužitelja
 main-configuration=Glavni konfiguraciju
