--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_ja.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=新しく制作されたユーザーに関連するデフォルトサイトの名前を<strong>一行ずつ</strong>入力してください
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=新しくユーザーを作成した際に関連付けるデフォルトのユーザーグループ名を<strong>一行ずつ</strong>入力してください。
 home-url=ホーム URL
-home-url-help=これは、ポータルのホーム ページです。たとえば、していること/web/ゲスト/家にホーム ページが場合は、/web/guest/home にこれを設定します。 (Automatic Translation)
+home-url-help=これは、Liferay インスタンスのホーム ページです。たとえば、していること/web/ゲスト/家にホーム ページが場合は、/web/guest/home にこれを設定します。 (Automatic Translation)
 how-do-users-authenticate=認証を行う項目
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=ポータル設定では名前、認証、デフォルトユーザーの関連付け、メールホスト名などグローバル（ポータル全体）の設定ができます。
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=ポータル設定
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=設定は、ほとんどのグローバル インスタンス設定が名、認証、デフォルト ユーザーの関連付け、およびメール ホスト名を含む、です。 (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=インスタンスの設定 (Automatic Translation)
 language-and-time-zone=言語および標準時
 mail-host-names=メールホスト名
 main-configuration=主な構成
