--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_ko.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Enter the default site names <strong>per line</strong> that are associated with newly created users. (Automatic Copy)
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Enter the default user group names <strong>per line</strong> that are associated with newly created users. (Automatic Copy)
 home-url=가정 URL
-home-url-help=포털의 홈 페이지입니다. 예를 들어 http://localhost:8080//웹/게스트/집 홈 페이지를 원하는 경우이 설정 /web/guest/home 합니다. (Automatic Translation)
+home-url-help=Liferay 인스턴스 홈 페이지입니다. 예를 들어 http://localhost:8080//웹/게스트/집 홈 페이지를 원하는 경우이 설정 /web/guest/home 합니다. (Automatic Translation)
 how-do-users-authenticate=사용자는 어떻게 확인하는가?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=설정 이름, 인증, 기본 사용자 연결 및 메일 호스트 이름을 글로벌 포털 설정의 대부분을 포함 하는 이다.입니다. (Automatic Translation)
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=조정
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=설정 이름, 인증, 기본 사용자 연결 및 메일 호스트 이름을 전역 인스턴스 설정의 대부분을 포함 하는 것입니다. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=인스턴스 설정 (Automatic Translation)
 language-and-time-zone=언어와 시간대
 mail-host-names=우편물 주인 이름
 main-configuration=주요 윤곽
