--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_lo.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_lo.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=ປ້ອນຊື່ໄຊທ໌ປົກກະຕິ <strong> ຕໍ່ແຖວ </strong> ທີ່ຕິດພັນກັບສະມາຄົມກັບຄວາມໃໝ່ ຂອງການສ້າງຜູ້ໃຊ້
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=ປ້ອນຊື່ກຸ່ມຜູ້ໃຊ້ປົກກະຕິ <strong> ຕໍ່ແຖວ </strong> ທີ່ຕິດພັນກັບສະມາຄົມກັບຄວາມໃໝ່ ຂອງການສ້າງຜູ້ໃຊ້
 home-url=ໜ້າຫຼັກ URL
-home-url-help=This is the home page of the portal. For example, if you want the home page to be http://localhost:8080/web/guest/home, set this to /web/guest/home. (Automatic Copy)
+home-url-help=This is the home page of the Liferay instance. For example, if you want the home page to be http://localhost:8080/web/guest/home, set this to /web/guest/home. (Automatic Copy)
 how-do-users-authenticate=ເຮັດການກຳນົດສິດຜູ້ໃຊ້ແນວໃດ?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=ການຕິດຕັ້ງຄ່າສຳລັບການໃຊ້ງານພ໋ອດອອນທັງໝົດ ເຊິງປະກອບດ້ວຍ ຊື່, ການກວດສອບ ແລະຊື່ເມວຂອງຮ໋ອດ.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=ການຕິດຕັ້ງ ພ໋ອກອອນ
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Settings is where most of the global instance settings are including names, authentication, default user associations, and mail host names. (Automatic Copy)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Instance Settings (Automatic Copy)
 language-and-time-zone=ພາສາ ແລະຂົງເຂດວລາ
 mail-host-names=ຊື່ເມວຣ໋ອດ
 main-configuration=ການຕັ້ງຄ່າຫຼັກ
