--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_nb.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Legg inn standard nettstedsnavn <strong>per linje</strong> som er assosiert med nyopprettede brukere.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Legg inn standardnavnet til brukergruppen <strong>per linje</strong> som er forbundet med de nye brukerne.
 home-url=Hjemme-URL
-home-url-help=Dette er hjemmesiden til portalen. For eksempel ønsker du hjemmesiden skal http://localhost: 8080/web/gjest/hjem, satt dette til /web/guest/home. (Automatic Translation)
+home-url-help=Dette er hjemmesiden til Liferay forekomsten. For eksempel ønsker du hjemmesiden for å være http://localhost:8080/web/gjest/hjem, satt dette til /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Hvordan autentiseres brukerne?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Portalinnstillinger er stedet hvor mesteparten av portalens globale innstillinger, inkludert navn, autentisering, standard brukertilknytning, og tjenere for e-post ligger.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Portalinnstillinger
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Innstillinger er der de fleste globale forekomst innstillingene inkluderer navn, godkjenning, standard bruker foreninger og post vertsnavn. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Innstillingene for systemforekomst (Automatic Translation)
 language-and-time-zone=Språk og tidssone
 mail-host-names=E-post vertsnavn
 main-configuration=Hovedinnstillinger
