--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_pt_BR.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Insira os nomes padrão do site <strong>por linha</strong> que estão associados a usuários recém-criados.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Insira os grupos padrão <strong>por linha</strong> que serão associados aos usuários recém-criados.
 home-url=URL de home
-home-url-help=Esta é a home page do portal. Por exemplo, se você quer ser http://localhost:8080//web/comentários/home home page, defina isso para /web/guest/home. (Automatic Translation)
+home-url-help=Esta é a home page do Liferay instância. Por exemplo, se você quer ser http://localhost:8080//web/comentários/home home page, defina isso para /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Como os usuários se autenticam?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Em configurações é possível gerenciar configurações globais do portal, incluindo nomes, autenticação, associação padrão de usuários e hostnames de emails.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Configurações do Portal
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Settings é onde a maioria das configurações instância global está incluindo nomes, autenticação, associações de usuário padrão e nomes de host de email. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Configurações de instância (Automatic Translation)
 language-and-time-zone=Idioma e fuso horário
 mail-host-names=Nomes de servidores de email
 main-configuration=Configuração principal
