--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_ru.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Введите названия сайтов по умолчанию <strong>по одному в сточке</strong>, которые будут связаны с создаваемыми пользователями.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Введите названия групп пользователей по умолчанию по одной <strong>на каждой строке</strong> that are associated with newly created users.
 home-url=Домашний URL
-home-url-help=Это домашняя страница портала. Например если вы хотите домашней страницы, чтобы быть http://localhost: 8080/web/гость/дома, установите это для /web/guest/home. (Automatic Translation)
+home-url-help=Это домашняя страница Liferay экземпляра. Например если вы хотите домашней страницы, чтобы быть http://localhost:8080/web/гость/дома, установите это для /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Как пользователи будут аутентифицироваться?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Настройки - это место управления большинством глобальных портальных настроек, такими как имена, аутентификация пользователей, связи пользователей по умолчанию и адреса серверов почты.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Настройки
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Параметры —, где большинство параметров глобального экземпляра включая имена, аутентификации, ассоциаций пользователей по умолчанию и имена узлов электронной почты. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Параметры экземпляра (Automatic Translation)
 language-and-time-zone=Язык и временной пояс
 mail-host-names=Имена почтовых хостов
 main-configuration=Основная конфигурация
