--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_sr_RS.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_sr_RS.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Унесите подразумеване називе сајтова <strong>по линији</strong>да буду повезани са новокреираним корисницима.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Унесите подразумевана имена група корисника <strong>по линији</strong> које су повезане са новонасталим корисницима.
 home-url=УРЛ Почетне Стране
-home-url-help=This is the home page of the portal. For example, if you want the home page to be http://localhost:8080/web/guest/home, set this to /web/guest/home. (Automatic Copy)
+home-url-help=This is the home page of the Liferay instance. For example, if you want the home page to be http://localhost:8080/web/guest/home, set this to /web/guest/home. (Automatic Copy)
 how-do-users-authenticate=Како да корисници потврде идентитет?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Подешавања су место већине глобалних портал подешавања, укључујући имена, аутентикацију, подразумевана удружења корисника и имена мејл хостова.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Портал Подешавања
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Settings is where most of the global instance settings are including names, authentication, default user associations, and mail host names. (Automatic Copy)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Instance Settings (Automatic Copy)
 language-and-time-zone=Језик и Временске Зоне
 mail-host-names=Мејл Назив Хоста
 main-configuration=Главна Конфигурација
