--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_sv.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Skriv in standardplatsnamnen <strong>per linje</strong> som är associerade med nyligen skapade användare.
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Lägg in startnamnet till användargruppen <strong>per rad</strong> som är förknippat med de nya användarna.
 home-url=Hem-URL
-home-url-help=Detta är startsidan för portalen. Till exempel om du vill att startsidan ska http://localhost: 8080/web/gäst/home, ange detta till /web/guest/home. (Automatic Translation)
+home-url-help=Detta är startsidan för Liferay instansen. Till exempel om du vill att startsidan ska localhost8080: / web/gäst/home, ange detta till /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Hur användarna autentiserar?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Under Inställningar finns de flesta globala portalinställningar inklusive namn, autentisering, standardtillhörigheter för användare samt mail host.
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Inställningar
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Inställningar är där de flesta global instans inställningar är bland annat namn, autentisering, intresseorganisationer för användare som standard och mail värdnamn. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Instans inställningar (Automatic Translation)
 language-and-time-zone=Språk och tidszon
 mail-host-names=E-postvärdnamn
 main-configuration=Huvudkonfiguration
