--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_tr.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Enter the default site names <strong>per line</strong> that are associated with newly created users. (Automatic Copy)
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Yeni oluşturulmuş kullanıcılarla bağlantılı varsayılan kullanıcı grup adlarını <strong>her bir satıra</strong> giriniz.
 home-url=Ana Sayfa URL'i
-home-url-help=Bu portal giriş sayfasıdır. Homepage http://localhost: 8080/web/konuk/ev olmak istiyorsanız, örneğin, bu /web/guest/home için ayarlayın. (Automatic Translation)
+home-url-help=Liferay örnek giriş sayfasıdır. Homepage http://localhost:8080/web/konuk/ev olmak istiyorsanız, örneğin, bu /web/guest/home için ayarlayın. (Automatic Translation)
 how-do-users-authenticate=Kullanıcılar nasıl onaylansın?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Settings is where most of the global portal settings are including names, authentication, default user associations, and mail host names. (Automatic Copy)
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Ayarlar
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Ayarlar yer alır nerede küresel örnek ayarların çoğunu adları, kimlik doğrulaması, varsayılan kullanıcı ilişkileri ve posta ana bilgisayar adları da dahil olmak üzere. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Örnek ayarlar (Automatic Translation)
 language-and-time-zone=Language and Time Zone (Automatic Copy)
 mail-host-names=E-posta Host Adları
 main-configuration=Ana Konfigürasyon
