--- a/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-settings/portal-settings-web/src/main/resources/content/Language_uk.properties
@@ -43,10 +43,10 @@ enter-the-default-role-names-per-line-that-are-associated-with-newly-created-use
 enter-the-default-site-names-per-line-that-are-associated-with-newly-created-users=Enter the default site names <strong>per line</strong> that are associated with newly created users. (Automatic Copy)
 enter-the-default-user-group-names-per-line-that-are-associated-with-newly-created-users=Введіть назви груп користувачів по замовчуванню по одній <strong>на кожному рядку</strong> що асоційовані із щойно створеними користувачами.
 home-url=Home URL (Automatic Copy)
-home-url-help=Це на головній сторінці порталу. Наприклад, якщо потрібно, щоб на головній сторінці, щоб бути http://localhost:8080 web/Відгуки /, будинок, встановити це /web/guest/home. (Automatic Translation)
+home-url-help=Це Головна сторінка Liferay інстанції. Наприклад, якщо потрібно, щоб на головній сторінці, щоб бути http://localhost:8080 web/Відгуки /, будинок, встановити це /web/guest/home. (Automatic Translation)
 how-do-users-authenticate=Як користувачі будуть автентифікуватися?
-javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Settings is where most of the global portal settings are including names, authentication, default user associations, and mail host names. (Automatic Copy)
-javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Налаштування
+javax.portlet.description.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Параметри є, де більшість параметрів глобальної інстанції в тому числі імена, аутентифікації, за замовчуванням користувачем асоціацій і пошти імен вузлів. (Automatic Translation)
+javax.portlet.title.com_liferay_portal_settings_web_portlet_PortalSettingsPortlet=Налаштування екземпляра (Automatic Translation)
 language-and-time-zone=Language and Time Zone (Automatic Copy)
 mail-host-names=Імена поштових хостів
 main-configuration=Конфіґурація компонентів
